FI-374: Add fix for overlapping elements, add margin and increase z-index.

--- a/kronofoto/static/assets/css/kronofoto.css
+++ b/kronofoto/static/assets/css/kronofoto.css
@@ -201,7 +201,7 @@
   flex-grow: 1;
   max-width: 650px;
   background-color: var(--fp-light-grey);
-  z-index: 99;
+  z-index: 9999;
 }
 #search-box-container img {
   margin: 7px;
@@ -966,7 +966,7 @@ main .fi-image-background{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 25px;
+  margin: 60px 25px 25px;
 }
 
 .tl a:hover > rect {
